[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/SMRT/dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/cutscenes/game_start.gd" type="Script" id=2]
[ext_resource path="res://textures/mansion_placeholder_1.png" type="Texture" id=3]

[node name="game_start" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -38.0
margin_top = -32.0
margin_right = 1031.0
margin_bottom = 612.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NinePatchRect" parent="CanvasLayer" instance=ExtResource( 1 )]
margin_left = 173.881
margin_top = 425.658
margin_right = 496.881
margin_bottom = 493.658

[node name="mansion_placeholder_1" type="Sprite" parent="."]
position = Vector2( 2034, -1313 )
texture = ExtResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished_dialog" from="CanvasLayer/NinePatchRect" to="." method="_on_NinePatchRect_finished_dialog"]
